it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.37.6 - November 30, 2009

    Added support for runtime instantiation of the <</2 control construct
    arguments.

    Corrected a bug (introduced in version 2.37.4) when simplifying calls
    to the {}/1 external call control construct with a variable argument.

    Updated the Logtalk compiler to workaround file path problems with
    back-end Prolog compilers (e.g. SICStus Prolog) where calls to the
    open/3-4 built-in predicate are not always relative to the current
    working directory.

    Updated the ECLiPSe, SICStus Prolog, SWI-Prolog, and YAP config files
    in order to detect discontiguous predicate clause warnings and update
    the Logtalk warnings counter accordingly.

    Updated the ECLiPSe config files to correct a bug in the definition of
    the predicate '$lgt_current_time'/3 where the number of seconds would
    be returned as a float instead of as an integer.

    Updated the SICStus Prolog config files in order to support settings
    files. Updated the SICStus Prolog 4.x config file in order to use the
    new "version_data" flag and recognize the new do/2 meta-predicate added
    in version 4.1.

    Updated the library support for unit testing in order to allow per-test
    setup and cleanup goals and to provide timing, testing file information,
    and statistics on passed and failed tests. Updated the "testing" example
    for the changes to the unit test support.

    Updated the Logtalk Windows installer in order to detect the new SICStus
    Prolog 4.1 version. If both 4.0.x and 4.1.x versions are installed, the
    installer creates a shortcut for using version 4.1.x as the back-end
    Prolog compiler.

    Updated the Logtalk Windows installer in order to detect both XSB single-